syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.endpoint.airbyte;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/endpoint/airbyte;tm_server_airbyte_endpoint";

import "yandex/cloud/priv/sensitive.proto";

message GoogleAdsSource {
    message CustomQuery {
        string query = 1;
        string table_name = 2;
    }
    message Credentials {
        string developer_token = 1 [(sensitive) = true];
        string client_id = 2;
        string client_secret = 3 [(sensitive) = true];
        string access_token = 4 [(sensitive) = true];
        string refresh_token = 5 [(sensitive) = true];
    }
    Credentials credentials = 7;
    string customer_id = 1;
    string start_date = 2;
    string end_date = 3;
    repeated CustomQuery custom_queries = 4;
    string login_customer_id = 5;
    double conversion_window_days = 6;
}
